assets/stylesheet.css
.m-0 {
    margin: 0;
}
.mb-0 {
    margin-bottom: 0;
}
.mt-0 {
    margin-top: 0;
}
.ml-0 {
    margin-left: 0;
}
.h-100 {
    height: 100%;
}
.flex-center {
    display: flex;
}
.flex-text {
    display: flex;
    justify-content: center;
    color: gray;
}
@media screen and (max-width: 768px) {
    .h-100vh {
        height: 100%;
    }
}
/* Estilo para o body */
body {
    font-family: Arial, sans-serif;
    background-color: #f0f0f0;
    margin: 0;
    padding: 0;
}

/* Estilo para o container */
.cont {
    max-width: 1800px;
    margin: 0 auto;
    padding: 20px;
}

/* Estilo para os cards */
.card-panel {
    padding: 20px;
    border-radius: 8px;
    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
}

/* Estilo para os botões */
button {
    margin-top: 10px;
}

/* Estilo personalizado para os textos */
.custom-text {
    font-size: 18px;
    color: #333;
}

.card-content {
    padding: 10px;
}

/* Altura inicial do container de processos */
#processos_container {
    height: 10px; /* Altura inicial */
    max-height: 460px;
    overflow: auto;
}

/* Altura fixa para o placeholder de processos */
#processos_placeholder {
    height: 420px; /* Altura fixa */
    overflow: auto;
}

/* Estilo para a classe radio-items */
.radio-items p {
    margin: 0; /* Remove a margem padrão dos parágrafos */
    padding: 0; /* Remove o padding padrão dos parágrafos */
    display: inline-block; /* Faz com que os parágrafos fiquem lado a lado */
    margin-right: 20px; /* Espaço entre os itens */
}

.radio-items label {
    display: flex; /* Alinha o texto e o input no mesmo nível */
    align-items: center; /* Alinha verticalmente o texto e o input */
}

.grant-process-cell-executing {
    background-color: green;
}

.grant-process-cell-waiting {
    background-color: gray;
}

.grant-process-cell-overload {
    background-color: red;
}

.grant-process-cell {
    border: 1px solid black;
}

.grant-process-label-cell {
    border-top: 1px solid black;
    border-bottom: 1px solid black;
}

.grant-timebar-cell {
    border-right: 1px solid black;
    border-left: 1px solid black;
}

.grant-cell{
    margin: 0;
    padding: 0;
    min-width: 2rem;
    height: 2rem;
    text-align: center;
}

#grant {
    width: 0;
    background-color: rgba(0, 0, 0, 0.1);
}

